Add example Emacs integration.

--- a/README
+++ b/README
@@ -460,6 +460,10 @@ Payload commands:
     done automatically if the payload data is executed when none has been
     extracted, though it can be used to reset the data to this.
 
+EDITOR INTEGRATION
+
+Emacs: See sample.el for a possible way to use TGL within Emacs.
+
 NOTES
 
 Some may find it odd that there is no comment syntax (though the (...);
@@ -468,6 +472,9 @@ construct effectively does so), and that no support exists for UNIX #! notation
 you find yourself wanting to reuse TGL code in a way other than by throwing it
 to a command in your library, or need to explain what is happening, you are
 using the wrong tool.
+
+This is also the reason that TGL has no way to take scripts other than reading
+from standard input, and why no syntax highlighting is provided.
 
 TGL should be considered as an extension to your editor, not as a programming
 language in its own right. If you try to use it as the latter, you'll be in for
